examples/test/testpolicy18848.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18848
  namespace: namespace181
spec:
  podSelector:
    matchLabels:
      key5: value25
      key19: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value47
          key11: value5
      podSelector:
        matchLabels:
          key27: value29
